; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/pcie/extr_tx.c_iwl_pcie_txq_set_inactive.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/pcie/extr_tx.c_iwl_pcie_txq_set_inactive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_trans = type { i32 }

@SCD_QUEUE_STTS_REG_POS_ACTIVE = common dso_local global i32 0, align 4
@SCD_QUEUE_STTS_REG_POS_SCD_ACT_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iwl_trans*, i32)* @iwl_pcie_txq_set_inactive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iwl_pcie_txq_set_inactive(%struct.iwl_trans* %0, i32 %1) #0 {
  %3 = alloca %struct.iwl_trans*, align 8
  %4 = alloca i32, align 4
  store %struct.iwl_trans* %0, %struct.iwl_trans** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.iwl_trans*, %struct.iwl_trans** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @SCD_QUEUE_STATUS_BITS(i32 %6)
  %8 = load i32, i32* @SCD_QUEUE_STTS_REG_POS_ACTIVE, align 4
  %9 = shl i32 0, %8
  %10 = load i32, i32* @SCD_QUEUE_STTS_REG_POS_SCD_ACT_EN, align 4
  %11 = shl i32 1, %10
  %12 = or i32 %9, %11
  %13 = call i32 @iwl_write_prph(%struct.iwl_trans* %5, i32 %7, i32 %12)
  ret void
}

declare dso_local i32 @iwl_write_prph(%struct.iwl_trans*, i32, i32) #1

declare dso_local i32 @SCD_QUEUE_STATUS_BITS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
